# nigamp

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TESTING_CALLBACKS.md  build.bat  build.sh  copy_drwav.bat  create_test_mp3s.bat  demo_callbacks.cpp  quick_callback_test.cpp  setup_libraries.bat  setup_libraries.sh  test_callback_quick.bat  test_callbacks.bat  test_fixed_callbacks.bat  test_hotkeys.bat  test_music_simulation.bat
.claude/: settings.local.json
include/: audio_engine.hpp  file_scanner.hpp  hotkey_handler.hpp  mp3_decoder.hpp  playlist.hpp  types.hpp
src/: alsa_audio_engine.cpp  audio_engine.cpp  file_scanner.cpp  hotkey_handler.cpp  linux_hotkey_handler.cpp  main.cpp  mp3_decoder.cpp  playlist.cpp
tests/: CMakeLists.txt  test_audio_engine.cpp  test_callback_architecture.cpp  test_callback_simple.cpp  test_decoder.cpp  test_file_scanner.cpp  test_hotkey_handler.cpp  test_music_player_simulation.cpp  test_playlist.cpp  test_simple_callback.cpp
